# pystardict

./: .gitignore  .travis.yml  MANIFEST.in  MILESTONES  MILESTONES.html  README  README.html  README.md  __init__.py  dev.py  pyproject.toml  pystardict.py  setup.py  stardict-quick_eng-rus.py  test.py  tox.ini
debian/: changelog  control  copyright  rules
dev_dic/: dev.idx  dev.ifo
examples/: demo.py  profile_demo.py
examples/stardict-quick_rus-eng-2.4.2/: quick_russian-english.dict.dz  quick_russian-english.idx.oft
src/: pystardict.py
stardict-quick_eng-rus-2.4.2/: quick_english-russian.ifo
stardict-quick_rus-eng-2.4.2/: quick_russian-english.idx  quick_russian-english.ifo
tests/: __init__.py  test_pystardict.py
